--- a/ldr_tools/Cargo.toml
+++ b/ldr_tools/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 glam = "0.23.0"
-weldr = { git = "https://github.com/ScanMountGoat/weldr" }
+weldr = { git = "https://github.com/ScanMountGoat/weldr", branch = "dev" }
 path-slash = "0.2.1"
 
 [dev-dependencies]
