--- a/ldr_tools/Cargo.toml
+++ b/ldr_tools/Cargo.toml
@@ -10,6 +10,7 @@ glam = "0.23.0"
 weldr = { git = "https://github.com/ScanMountGoat/weldr", branch = "dev" }
 path-slash = "0.2.1"
 rstar = "0.10.0"
+rayon = "1.7.0"
 
 [dev-dependencies]
 indoc = "2"
