--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Create Release Zip
       run: |
         cp target/debug/libldr_tools_py.so ldr_tools_blender/ldr_tools_py.so
-        zip ldr_tools_blender_linux_x64 ldr_tools_blender
+        zip -r ldr_tools_blender_linux_x64 ldr_tools_blender
     - uses: actions/upload-artifact@v3
       with:
         name: ldr_tools_blender_linux_x64
