--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,12 +15,52 @@ jobs:
       with:
         python-version: '3.10'
     - name: Build
-      run: cargo build
+      run: cargo build --release
     - name: Create Release Zip
       run: |
-        cp target/debug/libldr_tools_py.so ldr_tools_blender/ldr_tools_py.so
+        cp target/release/libldr_tools_py.so ldr_tools_blender/ldr_tools_py.so
         zip -r ldr_tools_blender_linux_x64 ldr_tools_blender
     - uses: actions/upload-artifact@v3
       with:
-        name: ldr_tools_blender_linux_x64
+        name: ldr_tools_blender_linux
         path: ldr_tools_blender_linux_x64.zip
+        
+  build-windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v3
+      with:
+        python-version: '3.10'
+    - name: Build
+      run: cargo build --release
+    - name: Create Release Zip
+      run: |
+        cp target/release/ldr_tools_py.dll ldr_tools_blender/ldr_tools_py.pyd
+        zip -r ldr_tools_blender_win_x64 ldr_tools_blender
+    - uses: actions/upload-artifact@v3
+      with:
+        name: ldr_tools_blender_win
+        path: ldr_tools_blender_win_x64.zip
+        
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v3
+      with:
+        python-version: '3.10'
+    - name: Build
+      run: |
+        # Workaround for compiling Pyo3 on MacOS
+        cd ldr_tools_py 
+        cargo rustc --release -- -C link-arg=-undefined -C link-arg=dynamic_lookup
+        cd ..
+    - name: Create Release Zip
+      run: |
+        cp target/release/libldr_tools_py.dylib ldr_tools_blender/ldr_tools_py.so
+        zip -r ldr_tools_blender_macos_x64 ldr_tools_blender
+    - uses: actions/upload-artifact@v3
+      with:
+        name: ldr_tools_blender_macos
+        path: ldr_tools_blender_macos_x64.zip
