--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Create Release Zip
       run: |
         cp target/release/libldr_tools_py.so ldr_tools_blender/ldr_tools_py.so
-        zip -r ldr_tools_blender_linux_x64 ldr_tools_blender
+        zip -r ldr_tools_blender_linux_x64.zip ldr_tools_blender
     - uses: actions/upload-artifact@v3
       with:
         name: ldr_tools_blender_linux
@@ -37,7 +37,7 @@ jobs:
     - name: Create Release Zip
       run: |
         cp target/release/ldr_tools_py.dll ldr_tools_blender/ldr_tools_py.pyd
-        zip -r ldr_tools_blender_win_x64 ldr_tools_blender
+        Compress-Archive -path ldr_tools_blender -destination ldr_tools_blender_win_x64.zip
     - uses: actions/upload-artifact@v3
       with:
         name: ldr_tools_blender_win
