--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,8 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: ldr_tools_blender_linux_x64.zip
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         
   build-windows:
     runs-on: windows-latest
@@ -56,6 +58,8 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: ldr_tools_blender_win_x64.zip
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
   build-macos:
     runs-on: macos-latest
@@ -99,3 +103,5 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: ldr_tools_blender_macos${{matrix.desc}}.zip
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
