--- a/ldr_tools/Cargo.toml
+++ b/ldr_tools/Cargo.toml
@@ -10,6 +10,7 @@ glam = "0.23.0"
 weldr = { git = "https://github.com/ScanMountGoat/weldr", rev = "c9ae933" }
 rstar = "0.10.0"
 rayon = "1.7.0"
+phf =  { version = "0.11.1", features = ["macros"] }
 
 [dev-dependencies]
 indoc = "2"
