simplify building for apple silicon

--- a/ldr_tools_py/Cargo.toml
+++ b/ldr_tools_py/Cargo.toml
@@ -8,6 +8,9 @@ pyo3 = { version = "0.18.1", features = ["extension-module"] }
 numpy = "0.18.0"
 ldr_tools = { path = "../ldr_tools" }
 
+[build-dependencies]
+pyo3-build-config = "0.18.1"
+
 [lib]
 name = "ldr_tools_py"
 crate-type = ["cdylib"]
