--- a/ldr_tools/Cargo.toml
+++ b/ldr_tools/Cargo.toml
@@ -3,14 +3,13 @@ name = "ldr_tools"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 glam = "0.23.0"
 weldr = { git = "https://github.com/ScanMountGoat/weldr", rev = "c9ae933" }
 rstar = "0.10.0"
 rayon = "1.7.0"
 phf =  { version = "0.11.1", features = ["macros"] }
+tracing = "0.1"
 
 [dev-dependencies]
 indoc = "2"
