--- a/ldr_tools/Cargo.toml
+++ b/ldr_tools/Cargo.toml
@@ -10,6 +10,7 @@ rstar = "0.10.0"
 rayon = "1.7.0"
 phf =  { version = "0.11.1", features = ["macros"] }
 tracing = "0.1"
+base64 = "0.22.1"
 zip = "2.2.0"
 
 [dev-dependencies]
