--- a/ldr_tools_py/Cargo.toml
+++ b/ldr_tools_py/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-pyo3 = { version = "0.22.3", features = ["extension-module", "py-clone"] }
-numpy = { git = "https://github.com/PyO3/rust-numpy", rev = "505a79c" }
+pyo3 = { version = "0.23.3", features = ["extension-module", "py-clone"] }
+numpy = "0.23.0"
 ldr_tools = { path = "../ldr_tools" }
 
 [build-dependencies]
-pyo3-build-config = "0.22.3"
+pyo3-build-config = "0.23.3"
 
 [lib]
 name = "ldr_tools_py"
