--- a/ldr_tools/Cargo.toml
+++ b/ldr_tools/Cargo.toml
@@ -5,13 +5,14 @@ edition = "2021"
 
 [dependencies]
 glam = "0.25.0"
-weldr = { git = "https://github.com/ScanMountGoat/weldr", rev = "e951a54" }
 rstar = "0.10.0"
 rayon = "1.7.0"
 phf =  { version = "0.11.1", features = ["macros"] }
 tracing = "0.1"
 base64 = "0.22.1"
 zip = "2.2.0"
+nom = "7.1.3"
+log = "0.4"
 
 [dev-dependencies]
 indoc = "2"
