--- a/ldr_tools_py/Cargo.toml
+++ b/ldr_tools_py/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 pyo3 = { version = "0.24.1", features = ["extension-module", "py-clone"] }
 numpy = "0.24.0"
 ldr_tools = { path = "../ldr_tools" }
+log = "0.4"
 
 [build-dependencies]
 pyo3-build-config = "0.24.1"
